--- a/鼎王/index.html
+++ b/鼎王/index.html
@@ -109,14 +109,14 @@
                     <div class="ani-text">
                         <div class="g-container">
                             <ul>
-                                <li>Lorem ipsum 1111111</li>
-                                <li>Lorem ipsum 2222222</li>
-                                <li>Lorem ipsum 3333333</li>
-                                <li>Lorem ipsum 4444444</li>
-                                <li>Lorem ipsum 5555555</li>
-                                <li>Lorem ipsum 6666666</li>
+                                <li>FUN夏日『海陸饗宴 指定品項75折』</li>
+                                <li>「美味龍厚禮」最高抽中萬元招待券</li>
+                                <li>2人/4人外帶套餐</li>
+                                <li>【積點卡會員點數】點點兌換開鍋囉!</li>
+                                <li>實體積點卡權益須知</li>
+                                <li>『 本月特約優惠內容 』</li>
                                 <!--末尾補一個首條資料-->
-                                <li>Lorem ipsum 1111111</li>
+                                <li>FUN夏日『海陸饗宴 指定品項75折』</li>
                             </ul>
                         </div>
                     </div>
